--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@aws-sdk/client-s3": "^3.362.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.9",
     "express": "^4.17.1",
     "payload": "^1.8.2"
   },
   "devDependencies": {
+    "@types/ejs": "^3.1.2",
     "@types/express": "^4.17.9",
     "@types/node": "^20.1.4",
     "copyfiles": "^2.4.1",
@@ -29,5 +31,10 @@
     "nodemon": "^2.0.6",
     "ts-node": "^9.1.1",
     "typescript": "^4.8.4"
+  },
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
   }
 }
