--- a/package.json
+++ b/package.json
@@ -16,16 +16,11 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.362.0",
-    "canvas": "^2.11.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.9",
     "express": "^4.17.1",
-    "false": "^0.0.4",
-    "image-data-uri": "^2.0.1",
-    "image-size": "^1.0.2",
-    "payload": "^1.8.2",
-    "sharp": "^0.32.4"
+    "payload": "^1.8.2"
   },
   "devDependencies": {
     "@types/ejs": "^3.1.2",
@@ -36,8 +31,5 @@
     "nodemon": "^2.0.6",
     "ts-node": "^9.1.1",
     "typescript": "^4.8.4"
-  },
-  "resolutions": {
-    "sharp": "latest"
   }
 }
